# jhtensor

./: AGENTS.md  Cargo.toml  PLAN2.md  README.md  add_func.metallib  build.rs  refactors.rs
.github/workflows/: rust.yml
benches/: tensor_bench.rs
src/: main.rs
src/shaders/: add_func.metal  all_kernels.metal  broadcast_func.metal  mat_mul_func.metal  mul_func.metal  sub_func.metal  sum_axis_func.metal  transpose_func.metal
src/tensor/: cpu_backend.rs  dtype.rs  metal_backend.rs  mod.rs  opts.rs  shape.rs  tensor.rs  tensor_error.rs
tests/add/: add_inline_types.rs  add_types.rs  main.rs
tests/broadcast/: fuzzy.rs  main.rs  types.rs
tests/matmul/: fuzzy.rs  metal_fuzzy.rs  types.rs
tests/mul/: main.rs  mul_types.rs
tests/sub/: main.rs  sub_types.rs
tests/sum_axis/: fuzzy.rs  main.rs  metal_fuzzy.rs  types.rs
tests/transpose/: fuzzy.rs  main.rs  transpose_types.rs
