[package]
name = "jhtensor"
version = "0.1.0"
edition = "2024"

[dependencies]
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-metal = "0.3.2"

[dev-dependencies]
criterion = "0.8.2"
rand = { version = "0.10", features = ["std"] }
rand_chacha = "0.10.0"

[[bench]]
name = "tensor_bench"
harness = false
